--- a/style.css
+++ b/style.css
@@ -53,3 +53,44 @@ main p {
 #dateTime {
   font-style: italic;
 }
+
+#statsContainer {
+  border: 1px solid white;
+  display: flex;
+  width: 80%;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+#statsContainer > div {
+  flex: 1;
+  padding-left: 20px;
+}
+
+ul {
+  list-style: none;
+}
+
+ul li {
+  margin: 5px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+ul li strong {
+  width: 60%;
+}
+
+ul li span {
+  width: 40%;
+}
+
+#passes {
+  padding: 0;
+  margin-top: 20px;
+}
+
+#passes p {
+  padding: 0;
+  margin-bottom: 10px;
+}
