--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
   top: 0;
   left: 0;
   background-image: url("https://source.unsplash.com/user/nasa");
-  filter: blur(4px);
   background-size: cover;
   z-index: -999;
 }
@@ -19,6 +18,7 @@
 body {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -28,6 +28,7 @@ body {
 main {
   width: 40%;
   min-width: 650px;
+  max-height: 900px;
   background-color: rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
@@ -35,7 +36,7 @@ main {
   padding: 20px;
   color: white;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
-  margin-top: 40px;
+  margin-block: 40px;
   box-shadow: 0px 0px 12px 4px rgba(255, 255, 255, 0.4);
 }
 
